--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -13,7 +13,7 @@ code {
   border-radius: 3px;
   color: $code-color;
   font-style: normal;
-  padding: .25rem .5rem;
+  padding: .25rem;
   text-shadow: 0 1px $white;
 }
 
