Updated font family

--- a/_sass/_message.scss
+++ b/_sass/_message.scss
@@ -6,6 +6,7 @@
 .message {
   background-color: $gray-1;
   color: $gray-4;
+  font-family: $secondary-font-family-semibold;
   font-size: .9rem;
   margin-bottom: 1rem;
   padding: 1rem;
