--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -75,6 +75,8 @@ blockquote {
   background-color: $sky-blue;
   border-left: .5rem solid $border-color-blue;
   color: $gray-4;
+  font-family: $secondary-font-family-semibold;
+  font-size: .9rem;
   margin: .8rem 0;
   padding: 1rem;
 
