Accessible colors for code

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -11,7 +11,7 @@ pre {
 code {
   background-color: $code-background-color;
   border-radius: 3px;
-  color: $code-color;
+  color: $plum;
   font-style: normal;
   padding: .25rem;
   text-shadow: 0 1px $white;
