--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -12,7 +12,7 @@
 
 // Pagination items can be `span`s or `a`s
 .pagination-item {
-  border: 1px solid $white-sand;
+  border: 1px solid $border-color;
   border-width: 1px 0;
   display: block;
   font-family: $secondary-font-family-semibold;
