--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -54,7 +54,7 @@ dd {
 hr {
   border: 0;
   border-bottom: 1px solid $white;
-  border-top: 1px solid $white-sand;
+  border-top: 1px solid $border-color;
   margin: 1.5rem 0;
   position: relative;
 }
