--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,65 +1,69 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Matt Smith is a Maine-based web developer who builds applications to deliver engaging user interactions and experiences.">
-  
-  {% if page.url %}
-    <meta property="og:url" content="{{ site.url }}{{ page.url }}">
-  {% else %}
-    <meta property="og:url" content="{{ site.url }}">
-  {% endif %}
-  {% if page.title %}
-    <meta property="og:type" content="article">
-  {% else %}
-    <meta property="og:type" content="website">
-  {% endif %}
-  {% if page.title %}
-    <meta property="og:title" content="{{ page.title }} &middot; {{ site.title }}">
-  {% else %}
-    <meta property="og:title" content="{{ site.title }} &middot; {{ site.tagline }}">
-  {% endif %}
-  {% if page.image %}
-    <meta property="og:image" content="{{ site.url }}/img/posts/sunset-home-office-min.jpg">
-  {% else %}
-    <meta property="og:image" content="{{ site.url }}/img/public/avatar@2x.png">
-  {% endif %}
-  {% if page.description %}
-    <meta property="og:description" content="{{ page.description }}">
-  {% else %}
-    <meta property="og:description" content="{{ site.description }}">
-  {% endif %}
+
+  <title>{% if page.title == "Home" %}{{ site.title }} &middot; {{ site.tagline }}{% else %}{{ page.title }} &middot; {{ site.title }}{% endif %}</title>
+
   {% if page.date %}
     <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
     <meta property="article:author" content="{{ site.url }}/about/">
   {% endif %}
+
   {% if page.categories %}
     {% for category in page.categories limit:1 %}
     <meta property="article:section" content="{{ category }}">
     {% endfor %}
-  {% endif %}  
+  {% endif %}
+  
   {% if page.tags %}
     {% for tag in page.tags %}
     <meta property="article:tag" content="{{ tag }}">
     {% endfor %}
   {% endif %}
 
+  {% if page.title %}
+    <meta property="og:type" content="article">
+  {% else %}
+    <meta property="og:type" content="website">
+  {% endif %}
+
+  {% if page.url %}
+    <meta property="og:url" content="{{ site.url }}{{ page.url }}">
+  {% else %}
+    <meta property="og:url" content="{{ site.url }}">
+  {% endif %}
+
+  {% if page.title %}
+    <meta property="og:title" content="{{ page.title }} &middot; {{ site.title }}">
+  {% else %}
+    <meta property="og:title" content="{{ site.title }} &middot; {{ site.tagline }}">
+  {% endif %}
+
+  <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+  {% if page.description %}
+    <meta property="og:description" content="{{ page.description }}">
+  {% else %}
+    <meta property="og:description" content="{{ site.description }}">
+  {% endif %}
+ 
+  {% if page.image %}
+    <meta property="og:image" content="{{ site.url }}/img/posts/sunset-home-office-min.jpg">
+  {% else %}
+    <meta property="og:image" content="{{ site.url }}/img/public/avatar@2x.png">
+  {% endif %}
+
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@allthingssmitty">
   <meta name="twitter:creator" content="@allthingssmitty">
   <meta name="twitter:title" content="{{ page.title }} &middot; {{ site.title }}">
-  <title>
-    {% if page.title == "Home" %}
-      {{ site.title }} &middot; {{ site.tagline }}
-    {% else %}
-      {{ page.title }} &middot; {{ site.title }}
-    {% endif %}
-  </title>
+  
   <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/img/public/apple-touch-icon.png?v={{ site.time | date: '%s' }}">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/img/public/favicon-32x32.png?v={{ site.time | date: '%s' }}">
   <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/img/public/favicon-16x16.png?v={{ site.time | date: '%s' }}">
   <link rel="manifest" href="{{ site.baseurl }}/img/public/manifest.json">
   <link rel="mask-icon" href="{{ site.baseurl }}/img/public/safari-pinned-tab.svg" color="#5bbad5">
   <link rel="shortcut icon" href="{{ site.baseurl }}/img/public/favicon.ico?v={{ site.time | date: '%s' }}">
+  
   <meta name="msapplication-config" content="{{ site.baseurl }}/img/public/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css?v={{ site.time | date: '%s' }}"> 
