Added "related posts"

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,8 @@ layout: default
 
 {% include share-page.html %}
 
+{% include related-posts.html %}
+
 {% include pagination.html %}
 
 {% include comments.html %}
