--- a/_includes/related-posts.html
+++ b/_includes/related-posts.html
@@ -1,15 +1,40 @@
 {% if site.related_posts != empty %}
 <aside class="related" role="complementary">
-  <h3>Related posts</h3>
-  <ul class="related-posts">
-    {% for post in site.related_posts limit:2 %}
+  <h4>Related posts</h4>
+
+  {% assign maxRelated = 3 %}
+  {% assign minCommonTags =  1 %}
+  {% assign maxRelatedCounter = 0 %}
+
+  {% for post in site.posts %}
+   
+    {% assign sameTagCount = 0 %}
+    {% assign commonTags = '' %}
+
+    {% for tag in post.tags %}
+      {% if post.url != page.url %}
+        {% if page.tags contains tag %}
+          {% assign sameTagCount = sameTagCount | plus: 1 %}
+          {% capture tagmarkup %} <span class="label label-default">{{ tag }}</span> {% endcapture %}
+          {% assign commonTags = commonTags | append: tagmarkup %}
+        {% endif %}
+      {% endif %}
+    {% endfor %}
+
+    <ul class="related-posts">
+    {% if sameTagCount >= minCommonTags %}
       <li>
         <a href="{{ site.baseurl }}{{ post.url }}">
           {{ post.title }}
-          <small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date_to_string }}</time></small>
+          <small class="post-date archive-date">{{ post.date | date: "%b %-d, %Y" }}</small>
         </a>
       </li>
-    {% endfor %}
-  </ul>
+      {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
+      {% if maxRelatedCounter >= maxRelated %}
+        {% break %}
+      {% endif %}
+    {% endif %}
+    </ul>
+  {% endfor %}
 </aside>
 {% endif %}
