--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -73,13 +73,9 @@
 }
 
 .archive-date {
-  float: right;
-  
-  @media (max-width: $large-breakpoint) {
-    display: block;
-    float: none;
-    margin: 0;
-  }
+  display: block;
+  font-size: .875rem;
+  margin-top: .25rem;
 }
 
 .embed {
@@ -128,11 +124,9 @@
 
 // Related posts
 .related {
-  border-bottom: 1px solid $border-color;
   border-top: 1px solid $border-color;
   margin-bottom: 2rem;
-  padding-bottom: 2rem;
-  padding-top: 2rem;
+  padding-top: .5rem;
 }
 
 .recent-posts,
