--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -27,7 +27,7 @@
 a.pagination-item {
   &:hover {
     background-color: $gray-1;
-    transition: background-color: ease .2s;
+    transition: background-color ease .2s;
   }
 }
 
