--- a/fun/src/text-soap.css
+++ b/fun/src/text-soap.css
@@ -420,3 +420,18 @@ body {
 		max-width: 100%;
 	}
 }
+
+/* override global */
+.masthead,
+.page-title,
+footer .social {
+    display: none !important;
+}
+
+footer {
+    border-left: 1px solid #e7e7e7;
+    border-right: 1px solid #e7e7e7;
+    font-family: "Museo Sans", "Helvetica Neue", sans-serif;
+    margin: 0;
+    padding: 2rem 0;
+}
