--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -15,6 +15,7 @@
 }
 
 @font-face {
+  font-display: swap;
   font-family: "BitterItalic";
   src: url(fonts/Bitter/Bitter-Italic.woff2) format("woff2"),
     url(fonts/Bitter/Bitter-Italic.woff) format("woff");
@@ -23,6 +24,7 @@
 }
 
 @font-face {
+  font-display: swap;
   font-family: "BitterBold";
   src: url(fonts/Bitter/Bitter-Bold.woff2) format("woff2"),
     url(fonts/Bitter/Bitter-Bold.woff) format("woff");
@@ -31,6 +33,7 @@
 }
 
 @font-face {
+  font-display: swap;
   font-family: "BitterBoldItalic";
   src: url(fonts/Bitter/Bitter-BoldItalic.woff2) format("woff2"),
     url(fonts/Bitter/Bitter-BoldItalic.woff) format("woff");
@@ -39,6 +42,7 @@
 }
 
 @font-face {
+  font-display: swap;
   font-family: "OpenSansBold";
   src: url(fonts/Open-Sans/OpenSans-Bold.woff2) format("woff2"),
     url(fonts/Open-Sans/OpenSans-Bold.woff) format("woff");
@@ -47,6 +51,7 @@
 }
 
 @font-face {
+  font-display: swap;
   font-family: "OpenSansSemibold";
   src: url(fonts/Open-Sans/OpenSans-Semibold.woff2) format("woff2"),
     url(fonts/Open-Sans/OpenSans-Semibold.woff) format("woff");
