--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -88,11 +88,11 @@ blockquote {
     margin-bottom: 0;
   }
 
-  @media (min-width: 53.125em) {
+  @media (min-width: 53.125rem) {
     margin: 1.5rem -1.75rem;
   }
   
-  @media (min-width: 30em) {
+  @media (min-width: 30rem) {
     padding: 1rem 1.25rem;
   }
 }
