--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -31,7 +31,7 @@ $link-color: $blue;
 $border-color: $white-sand;
 $border-color-blue: $link-color;
 
-$large-breakpoint: 38em;
+$large-breakpoint: 38rem;
 $large-font-size: 20px;
 
 $code-font-family: "Inconsolata", Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
