--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -88,7 +88,7 @@
   ul {
     display: inline-block;
     margin: 0;
-    margin-left: .25em;
+    margin-left: .25rem;
     padding: 0;
 
     li {
