--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>{% if page.title == "Home" %}{{ site.title }} &middot; {{ site.tagline }}{% else %}{{ page.title }} &middot; {{ site.title }}{% endif %}</title>
 
@@ -55,8 +55,31 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@allthingssmitty">
   <meta name="twitter:creator" content="@allthingssmitty">
-  <meta name="twitter:title" content="{{ page.title }} &middot; {{ site.title }}">
   
+  {% if page.url %}
+    <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
+  {% else %}
+    <meta name="twitter:url" content="{{ site.url }}">
+  {% endif %}
+
+  {% if page.title %}
+    <meta name="twitter:title" content="{{ page.title }} &middot; {{ site.title }}">
+  {% else %}
+    <meta name="twitter:title" content="{{ site.title }} &middot; {{ site.tagline }}">
+  {% endif %}
+
+  {% if page.description %}
+    <meta property="twitter:description" content="{{ page.description }}">
+  {% else %}
+    <meta property="twitter:description" content="{{ site.description }}">
+  {% endif %}
+
+  {% if page.image %}
+    <meta property="twitter:image" content="{{ site.url }}/img/posts/sunset-home-office-min.jpg">
+  {% else %}
+    <meta property="twitter:image" content="{{ site.url }}/img/public/avatar@2x.png">
+  {% endif %}
+
   <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/img/public/apple-touch-icon.png?v={{ site.time | date: '%s' }}">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/img/public/favicon-32x32.png?v={{ site.time | date: '%s' }}">
   <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/img/public/favicon-16x16.png?v={{ site.time | date: '%s' }}">
