--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,11 @@
 
   <body>
     <div class="container">
-      <header class="masthead" role="banner">
+      <header class="masthead">
         <div class="skip-nav">
           <a href="#content">Skip to main content</a>
         </div>
-        <nav class="row" role="navigation">
+        <nav class="row">
           <ul>
             <li>
               <h1 class="masthead-title">
