--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="post" role="article" tabindex="0">
+<article class="post" tabindex="0">
  
   <h2 class="post-title">{{ page.title }}</h2>
   
