--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,7 +8,7 @@ $gray-6: #303030;
 
 $blue: #0074d9;
 $flat-black: #0b0c0c;
-$pale-blue: #b3d4fc;
+$forest-green: #1e8400;
 $plum: #905;
 $sky-blue: #f9fbff;
 $white: #fff;
@@ -32,7 +32,7 @@ $border-color: $white-sand;
 $border-color-blue: $link-color;
 
 $large-breakpoint: 38rem;
-$large-font-size: 20px;
+$large-font-size: 1.25rem;
 
 $code-font-family: "Inconsolata", Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
 $code-background-color: $white-gray;
