--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,9 +5,14 @@
 .container {
   margin-left:  auto;
   margin-right: auto;
-  max-width: 38rem;
+  max-width: $large-breakpoint;
   padding-left:  1.5rem;
   padding-right: 1.5rem;
+
+  @media only screen and (max-width: $large-breakpoint) {
+    padding-left:  1rem;
+    padding-right: 1rem;
+  }
 }
 
 footer {
