--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -48,7 +48,7 @@
     margin-top: .5rem;
     text-transform: uppercase;
     
-    @media (max-width: $large-breakpoint) {
+    @media only screen and (max-width: $large-breakpoint) {
       display: block;
     }
   }
