--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -31,7 +31,7 @@ a.pagination-item {
   }
 }
 
-@media (min-width: 30rem) {
+@media only screen and (min-width: 30rem) {
   .pagination {
     margin: 3rem 0;
   }
@@ -42,13 +42,13 @@ a.pagination-item {
     width: 50%;
 
     &:first-child {
-      border-bottom-left-radius: 4px;
-      border-top-left-radius:    4px;
+      border-bottom-left-radius: .25rem;
+      border-top-left-radius: .25rem;
       margin-bottom: 0;
     }
     &:last-child {
-      border-bottom-right-radius: 4px;
-      border-top-right-radius:    4px;
+      border-bottom-right-radius: .25rem;
+      border-top-right-radius: .25rem;
       margin-left: -1px;
     }
   }
