--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,14 +44,14 @@
     <script async src="{{ site.baseurl }}/js/prism.js?v={{ site.time | date: '%s' }}"></script>
     {% if jekyll.environment == "production" %}
       <script async id="dsq-count-scr" src="//allthingssmitty-com.disqus.com/count.js"></script>
-      <script async>
+      <!--<script async>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
         ga('create', '{{ site.analytics_id }}', 'auto');
         ga('send', 'pageview');
-      </script>
+      </script>-->
     {% endif %}
   </body>
 </html>
